force-app/main/default/objects/Account/fields/OCR_Certification_Date__c.field-meta.xml
<CustomField>
    <fullName>OCR_Certification_Date__c</fullName>
    <label>Certification Date</label>
    <type>Date</type>
</CustomField>