force-app/main/default/objects/Account/fields/PBS_AAAP_AB_Code__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_AB_Code__c</fullName>
    <description>Placeholder A/B Code</description>
    <externalId>true</externalId>
    <label>A/B Code</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>