force-app/main/default/objects/Account/fields/Product_Service_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Service_Code__c</fullName>
    <label>Product/ Service Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>