force-app/main/default/objects/Account/fields/Routing_Code__c.field-meta.xml
<CustomField>
    <fullName>Routing_Code__c</fullName>
    <label>Routing Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>