force-app/main/default/objects/Account/fields/SSO__c.field-meta.xml
<CustomField>
    <fullName>SSO__c</fullName>
    <label>SSO</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Federal Acquisition Service (FAS)</fullName>
            </value>
            <value>
                <fullName>Public Buildings Service (PBS)</fullName>
            </value>
            <value>
                <fullName>Office of Government Policy (OGP)</fullName>
            </value>
            <value>
                <fullName>Office of the Chief Financial Officer (OCFO)</fullName>
            </value>
            <value>
                <fullName>Office of the Chief Acquisition Officer (OCAO)</fullName>
            </value>
            <value>
                <fullName>Office of the Chief People Officer (OCPO)</fullName>
            </value>
            <value>
                <fullName>Office of the Chief Information Officer (OCIO)</fullName>
            </value>
            <value>
                <fullName>Office of Congressional and Intergovernmental Affairs (OCIA)</fullName>
            </value>
            <value>
                <fullName>Office of Citizen Services &amp; Innovative Technologies (OCSIT)</fullName>
            </value>
            <value>
                <fullName>Office of Communications and Marketing (OCM)</fullName>
            </value>
            <value>
                <fullName>Office of Small Business Utilization (OSBU)</fullName>
            </value>
            <value>
                <fullName>Office of the General Counsel (OGC)</fullName>
            </value>
            <value>
                <fullName>Office of Civil Rights (OCR)</fullName>
            </value>
            <value>
                <fullName>Office of Emergency Response and Recovery (OERR)</fullName>
            </value>
            <value>
                <fullName>Office of the Inspector General (OIG)</fullName>
            </value>
            <value>
                <fullName>Civilian Board of Contract Appeals (CBCA)</fullName>
            </value>
            <value>
                <fullName>non-GSA U.S. Government Organization (Fed)</fullName>
            </value>
            <value>
                <fullName>State, Local, or Tribal Government (Local)</fullName>
            </value>
            <value>
                <fullName>Non-US Government Organization (Foreign)</fullName>
            </value>
            <value>
                <fullName>Industry Business Partner of GSA (BP)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>