force-app/main/default/objects/Account/recordTypes/AAAP_Portal.recordType-meta.xml
<RecordType>
    <fullName>AAAP_Portal</fullName>
    <active>true</active>
    <description>This Account is used for assigning all the portal contacts</description>
    <label>AAAP Portal</label>
</RecordType>