force-app/main/default/objects/Account/recordTypes/Account.recordType-meta.xml
<RecordType>
    <fullName>Account</fullName>
    <active>true</active>
    <description>This is the standard account record type.</description>
    <label>Account</label>
</RecordType>