force-app/main/default/objects/Account/recordTypes/Government_Agency.recordType-meta.xml
<RecordType>
    <fullName>Government_Agency</fullName>
    <active>true</active>
    <label>Government Agency</label>
</RecordType>