force-app/main/default/objects/Account/recordTypes/GSA_Organization.recordType-meta.xml
<RecordType>
    <fullName>GSA_Organization</fullName>
    <active>false</active>
    <description>This is the account record type for documenting GSA organizations.</description>
    <label>GSA Organization</label>
</RecordType>