force-app/main/default/objects/Account/recordTypes/Property_Owner.recordType-meta.xml
<RecordType>
    <fullName>Property_Owner</fullName>
    <active>true</active>
    <description>This Account of type Property Owner contains DUNS #</description>
    <label>Property Owner</label>
</RecordType>